--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
         </div>
     </div>
 
+    <audio src="audio/first_5_questions.mp3" id="first5QuestionsMusic"></audio>
+    <audio src="audio/correct_first_5_questions.mp3" id="correctFirst5QuestionsMusic"></audio>
     <audio src="audio/lets_play.mp3" id="letsPlayMusic"></audio>
     <audio src="audio/correct.mp3" id="correctMusic"></audio>
     <audio src="audio/lose.mp3" id="loseMusic"></audio>
     <audio src="audio/5050.mp3" id="fiftyFiftyMusic"></audio>  
     <audio src="audio/phone.mp3" id="phoneMusic"></audio>   
     <audio src="audio/audience.mp3" id="audienceMusic"></audio>  
+    <audio src="audio/million.mp3" id="millionMusic"></audio>  
 
     <main>
         <section>
